--- a/Proyecto_Final_Coder/scss/components/_footer.scss
+++ b/Proyecto_Final_Coder/scss/components/_footer.scss
@@ -1,7 +1,7 @@
 
         
 .container_footer{ 
-    background-color: $secondarycolor;
+    background-color: $terciarycolor;
     width: 100%;
     position:relative;
     text-decoration: underline double;
