--- a/Proyecto_Final_Coder/css/style.css
+++ b/Proyecto_Final_Coder/css/style.css
@@ -1,9 +1,9 @@
 @import url("https://fonts.googleapis.com/css2? family= Montserrat:wght@100;200;300;400;500;600;700;800 & display=swap");
-.font_size, .container_footer, header .navbar-nav, .imagen_fondo .container-formulario, .imagen_fondo .container-maps {
+.font_size, .container_footer, .imagen_fondo .container-formulario, .imagen_fondo .container-maps, .imagen_fondo .container_menuvinos {
   font-size: 20px; }
 
 .container_footer {
-  background-color: #9e0c39;
+  background-color: black;
   width: 100%;
   position: relative;
   text-decoration: underline double;
@@ -20,17 +20,42 @@ header {
   position: sticky; }
   header .img_logo {
     width: 120px; }
-  header .navbar-nav a {
-    background-color: black;
-    border: 5px solid white;
-    text-decoration: none;
-    font-size: 20px;
-    color: white;
-    color: white; }
-    header .navbar-nav a:hover {
-      background-color: #9e0c39;
-      color: black;
-      color: white; }
+  header .navbar-nav {
+    gap: 20px; }
+    header .navbar-nav .nav-item {
+      -webkit-animation: rotate-in-ver 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
+      animation: rotate-in-ver 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
+    header .navbar-nav a {
+      background-color: white;
+      border: 5px solid white;
+      text-decoration: none;
+      font-size: 20px;
+      color: white;
+      color: black; }
+      header .navbar-nav a:hover {
+        background-color: white;
+        color: black;
+        color: black; }
+
+@-webkit-keyframes rotate-in-ver {
+  0% {
+    -webkit-transform: rotateY(-360deg);
+    transform: rotateY(-360deg);
+    opacity: 0; }
+  100% {
+    -webkit-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+    opacity: 1; } }
+
+@keyframes rotate-in-ver {
+  0% {
+    -webkit-transform: rotateY(-360deg);
+    transform: rotateY(-360deg);
+    opacity: 0; }
+  100% {
+    -webkit-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+    opacity: 1; } }
 
 .imagen_fondo {
   background-image: url(../GaleriaVino/logo-vino1.jpg);
@@ -49,7 +74,7 @@ header {
     margin-block: 10px; }
   .imagen_fondo .card-body {
     text-align: center;
-    background-color: #9e0c39;
+    background-color: black;
     padding-block: 20px;
     color: white; }
   .imagen_fondo .container-formulario {
@@ -63,14 +88,12 @@ header {
     height: 300px;
     align-items: center; }
   .imagen_fondo .container_menuvinos {
-    font-size: 20px;
     display: flex;
     margin-left: 30px;
     background-color: black;
     color: white;
     position: fixed;
-    z-index: 1;
-    color: white; }
+    z-index: 1; }
   .imagen_fondo .wpp {
     position: fixed;
     bottom: 10px;
