--- a/Proyecto_Final_Coder/scss/base/_mixins.scss
+++ b/Proyecto_Final_Coder/scss/base/_mixins.scss
@@ -9,3 +9,8 @@
     background-color: $maincolor;
     color:$terciarycolor;
 }
+
+@mixin tamanos($ancho, $alto){
+  width: $ancho;
+  height: $alto;
+}
