--- a/Proyecto_Final_Coder/scss/components/_main.scss
+++ b/Proyecto_Final_Coder/scss/components/_main.scss
@@ -8,6 +8,7 @@
     height: auto;
     text-align: center;
     padding-top: 30px;
+    font-weight: bold;
 
     .container1{
         margin-top: 10px;
@@ -19,7 +20,8 @@
     .container_index{
         margin-top: 90px;
         align-items: center center;
-        margin-block:10px
+        margin-block:10px;
+       
         
     }
     
@@ -28,8 +30,13 @@
         background-color: $terciarycolor;
         padding-block: 20px;
         color: $maincolor;
+        @include media-up(lg) {
+            background-color:red;
+        }
     }
     
+        
+     
     .container-formulario{
         margin-top: 20px 5px;
         margin-inline: 500px;
@@ -41,13 +48,11 @@
         @extend .font_size;
         height: 400px;
     }
-    
-    .altura{
-        width:300px;
-        height: 300px;
+     
+    .altura {
+        @include tamanos(300px, 300px);
         align-items: center;
-    
-       
+
     }
     
     .container_menuvinos{
@@ -67,6 +72,7 @@
         right: 10px;
         width:5%;
         z-index: 1;
+     
     }
     
     }
