--- a/Proyecto_Final_Coder/scss/base/_extends.scss
+++ b/Proyecto_Final_Coder/scss/base/_extends.scss
@@ -2,17 +2,17 @@
     font-size: 20px;
 }
 
-.titulo1{
+.titulo_1{
     -webkit-animation:roll-in-right .6s ease-out both;
     animation:roll-in-right .6s ease-out both
 }
 
-.titulo2{
+.titulo_2{
     -webkit-animation:roll-in-left .6s ease-out both;
     animation:roll-in-left .6s ease-out both
 }
 
-.titulo3{
+.titulo_3{
     -webkit-animation:slide-in-elliptic-top-fwd .7s cubic-bezier(.25,.46,.45,.94) both;animation:slide-in-elliptic-top-fwd .7s cubic-bezier(.25,.46,.45,.94) both
 }
 
