--- a/Proyecto_Final_Coder/scss/components/_main.scss
+++ b/Proyecto_Final_Coder/scss/components/_main.scss
@@ -15,38 +15,29 @@
     .container1{
         margin-top: 10px;
         margin: 20px;
-    
-        
+
     }
     
     .container_index{
         margin-top: 90px;
         align-items: center center;
         margin-block:10px;
-    
-        
     }
+
     .titulo1 {
-        @include titulo-1;
+        @extend .titulo_1;
     }
     .titulo2 {
-        @include titulo2;
+        @extend .titulo_2;
         margin-top: 20px;
         
     }
     .titulo3 {
-        @include titulo3;
+        @extend .titulo_3;
         
     }
 
-  
-    @media screen and (max-width: 760px) { 
-        .catalogo{
-            background-color: aqua;
-        }
-            
-         }
-     }   
+
     
     .card-body{
         text-align: center;
@@ -117,3 +108,4 @@
 
 // titulo 2
  @-webkit-keyframes slide-in-elliptic-top-fwd{0%{-webkit-transform:translateY(-600px) rotateX(-30deg) scale(0);transform:translateY(-600px) rotateX(-30deg) scale(0);-webkit-transform-origin:50% 100%;transform-origin:50% 100%;opacity:0}100%{-webkit-transform:translateY(0) rotateX(0) scale(1);transform:translateY(0) rotateX(0) scale(1);-webkit-transform-origin:50% 1400px;transform-origin:50% 1400px;opacity:1}}@keyframes slide-in-elliptic-top-fwd{0%{-webkit-transform:translateY(-600px) rotateX(-30deg) scale(0);transform:translateY(-600px) rotateX(-30deg) scale(0);-webkit-transform-origin:50% 100%;transform-origin:50% 100%;opacity:0}100%{-webkit-transform:translateY(0) rotateX(0) scale(1);transform:translateY(0) rotateX(0) scale(1);-webkit-transform-origin:50% 1400px;transform-origin:50% 1400px;opacity:1}}
+}
