--- a/Proyecto_Final_Coder/scss/base/_mixins.scss
+++ b/Proyecto_Final_Coder/scss/base/_mixins.scss
@@ -16,8 +16,8 @@
 }
 
 
-@media (min-width: 576px)
 
-@media (min-width: 768px)
 
-@media (min-width: 992px)
+// @media (min-width: 768px){}
+
+// @media (min-width: 992px){}
