--- a/Proyecto_Final_Coder/scss/base/_variables.scss
+++ b/Proyecto_Final_Coder/scss/base/_variables.scss
@@ -2,4 +2,11 @@ $maincolor:white;
 $secondarycolor:#9f0942;
 $terciarycolor:black; 
 
-
+$media-breakpoint-up: (
+  xs: 0,
+  sm: 576px,
+  md: 768px,
+  lg: 992px,
+  xl: 1200px,
+  xxl: 1400px
+);
