--- a/Proyecto_Final_Coder/scss/components/_main.scss
+++ b/Proyecto_Final_Coder/scss/components/_main.scss
@@ -1,5 +1,4 @@
 
-
 .imagen_fondo {
     background-image: url(../GaleriaVino/logo-vino1.jpg);
     background-size:cover;
@@ -10,27 +9,23 @@
     padding-top: 30px;
     font-weight: bold;
 
-
-  
-
-    .container1{
-        margin-top: 10px;
-        margin: 20px;
+    /* Media query mobile */
+@media screen and (max-width:576px) {
+    .box {
+        background-color:aquamarine;
 
     }
 }
-    
-@include media-breakpoint-up(sm) {
+
+    /* Media query tablet */
+@media screen and (max-width:992px) {
     .box {
-      background-color: aqua;
+        grid-template-columns: repeat(2, 1fr);
+        background-color:red;
     }
-  }
-    
-    .container_index{
-        margin-top: 90px;
-        align-items: center center;
-        margin-block:10px;
-    }
+  
+}
+
 
     .container-promociones{
         width: 60%;
@@ -142,3 +137,4 @@
 
 // titulo 2
  @-webkit-keyframes slide-in-elliptic-top-fwd{0%{-webkit-transform:translateY(-600px) rotateX(-30deg) scale(0);transform:translateY(-600px) rotateX(-30deg) scale(0);-webkit-transform-origin:50% 100%;transform-origin:50% 100%;opacity:0}100%{-webkit-transform:translateY(0) rotateX(0) scale(1);transform:translateY(0) rotateX(0) scale(1);-webkit-transform-origin:50% 1400px;transform-origin:50% 1400px;opacity:1}}@keyframes slide-in-elliptic-top-fwd{0%{-webkit-transform:translateY(-600px) rotateX(-30deg) scale(0);transform:translateY(-600px) rotateX(-30deg) scale(0);-webkit-transform-origin:50% 100%;transform-origin:50% 100%;opacity:0}100%{-webkit-transform:translateY(0) rotateX(0) scale(1);transform:translateY(0) rotateX(0) scale(1);-webkit-transform-origin:50% 1400px;transform-origin:50% 1400px;opacity:1}}
+}
