--- a/Proyecto_Final_Coder/css/style.css
+++ b/Proyecto_Final_Coder/css/style.css
@@ -1,16 +1,16 @@
 @import url("https://fonts.googleapis.com/css2? family= Montserrat:wght@100;200;300;400;500;600;700;800 & display=swap");
-.font_size, .container_footer, .imagen_fondo .container-formulario, .imagen_fondo .container_menuvinos {
+.font_size, .container_footer, .container-formulario, .container_menuvinos {
   font-size: 20px; }
 
-.titulo_1, .imagen_fondo .titulo1 {
+.titulo_1, .titulo1 {
   -webkit-animation: roll-in-right .6s ease-out both;
   animation: roll-in-right .6s ease-out both; }
 
-.titulo_2, .imagen_fondo .titulo2 {
+.titulo_2, .titulo2 {
   -webkit-animation: roll-in-left .6s ease-out both;
   animation: roll-in-left .6s ease-out both; }
 
-.titulo_3, .imagen_fondo .titulo3 {
+.titulo_3, .titulo3 {
   -webkit-animation: slide-in-elliptic-top-fwd 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
   animation: slide-in-elliptic-top-fwd 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) both; }
 
@@ -83,67 +83,73 @@ header {
   text-align: center;
   padding-top: 30px;
   font-weight: bold;
-  /* Media query mobile */
-  /* Media query tablet */ }
+  /* Media query mobile */ }
   @media screen and (max-width: 576px) {
     .imagen_fondo .box {
-      background-color: aquamarine; } }
-  @media screen and (max-width: 992px) {
-    .imagen_fondo .box {
-      grid-template-columns: repeat(2, 1fr);
-      background-color: red; } }
-  .imagen_fondo .container-promociones {
-    width: 60%; }
-  .imagen_fondo .titulo2 {
-    margin-top: 20px; }
-  .imagen_fondo .card-body {
-    text-align: center;
-    background-color: black;
-    padding-block: 20px;
-    color: white; }
-    .imagen_fondo .card-body:hover {
+      background-color: aquamarine;
+      grid-auto-columns: repeat(2, 1fr); } }
+  .imagen_fondo .menu-footer {
+    display: flex; }
+
+.container-promociones {
+  width: 60%; }
+
+.titulo2 {
+  margin-top: 20px; }
+
+.card-body {
+  text-align: center;
+  background-color: black;
+  padding-block: 20px;
+  color: white; }
+  .card-body:hover {
+    background-color: white;
+    color: black;
+    background-color: #9f0942; }
+
+.container-formulario {
+  margin: 150px;
+  margin-inline: 500px;
+  padding-inline: 1%; }
+  .container-formulario .boton {
+    background-color: white;
+    color: black;
+    padding-bottom: 10px;
+    margin-bottom: 30px;
+    gap: 10px; }
+    .container-formulario .boton:hover {
       background-color: white;
       color: black;
       background-color: #9f0942; }
-  .imagen_fondo .container-formulario {
-    margin: 150px;
-    margin-inline: 500px;
-    padding-inline: 1%; }
-    .imagen_fondo .container-formulario .boton {
-      background-color: white;
-      color: black;
-      padding-bottom: 10px;
-      margin-bottom: 30px;
-      gap: 10px; }
-      .imagen_fondo .container-formulario .boton:hover {
-        background-color: white;
-        color: black;
-        background-color: #9f0942; }
-  .imagen_fondo .container-maps {
-    width: 600px;
-    height: 40px;
-    align-items: center;
-    margin: 5px;
-    padding-bottom: 40px; }
-  .imagen_fondo .container-video {
-    width: 900px;
-    height: 400px;
-    align-items: center;
-    margin: 60px;
-    padding: 50px; }
-  .imagen_fondo .container_menuvinos {
-    display: flex;
-    margin-left: 30px;
-    background-color: black;
-    color: white;
-    position: fixed;
-    z-index: 1; }
-  .imagen_fondo .wpp {
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-    width: 5%;
-    z-index: 1; }
+
+.container-maps {
+  width: 600px;
+  height: 40px;
+  align-items: center;
+  margin: 5px;
+  padding-bottom: 40px; }
+
+.container-video {
+  width: 900px;
+  height: 400px;
+  align-items: center;
+  margin: 60px;
+  padding: 50px; }
+
+.container_menuvinos {
+  display: flex;
+  margin-left: 30px;
+  background-color: black;
+  color: white;
+  position: fixed;
+  z-index: 1; }
+
+.wpp {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  width: 5%;
+  z-index: 1; }
 
 @-webkit-keyframes roll-in-right {
   0% {
