--- a/Proyecto_Final_Coder/scss/components/_main.scss
+++ b/Proyecto_Final_Coder/scss/components/_main.scss
@@ -13,27 +13,28 @@
 @media screen and (max-width:576px) {
     .box {
         background-color:aquamarine;
+        grid-auto-columns: repeat(2, 1fr);
 
     }
 }
 
-    /* Media query tablet */
-@media screen and (max-width:992px) {
-    .box {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        background-color:red;
-    }
+//     /* Media query tablet */
+// @media screen and (max-width:992px) {
+//     .box {
+//         display: grid;
+//         grid-template-columns: repeat(2, 1fr);
+//         background-color:red;
+//     }
   
-}
-/* Media query desktop */
-@media screen and (max-width:1120px) {
-    .productos {
-        display: grid;
-        background-color:red;
-        grid-template-columns: repeat(4, 1fr);
+// }
+// /* Media query desktop */
+// @media screen and (max-width:1120px) {
+//     .box {
+//         display: grid;
+//         background-color:greenyellow;
+//         grid-template-columns: repeat(4, 1fr);
 
-    }
+//     }
 
 
     .menu-footer {
@@ -151,4 +152,3 @@
 
 // titulo 2
  @-webkit-keyframes slide-in-elliptic-top-fwd{0%{-webkit-transform:translateY(-600px) rotateX(-30deg) scale(0);transform:translateY(-600px) rotateX(-30deg) scale(0);-webkit-transform-origin:50% 100%;transform-origin:50% 100%;opacity:0}100%{-webkit-transform:translateY(0) rotateX(0) scale(1);transform:translateY(0) rotateX(0) scale(1);-webkit-transform-origin:50% 1400px;transform-origin:50% 1400px;opacity:1}}@keyframes slide-in-elliptic-top-fwd{0%{-webkit-transform:translateY(-600px) rotateX(-30deg) scale(0);transform:translateY(-600px) rotateX(-30deg) scale(0);-webkit-transform-origin:50% 100%;transform-origin:50% 100%;opacity:0}100%{-webkit-transform:translateY(0) rotateX(0) scale(1);transform:translateY(0) rotateX(0) scale(1);-webkit-transform-origin:50% 1400px;transform-origin:50% 1400px;opacity:1}}
-}
